# rvpin

./: .gitignore  CMakeLists.txt  README.md  champsim_config.json  requirements.txt
docs/: champsim_integration.md  spike_integration.md
examples/: CMakeLists.txt  cache_analyzer.cpp  cache_test.cpp  champsim_example.cpp  instruction_counter.cpp  syscall_tracer.cpp
scripts/: generate_encoding.py  setup.sh  setup_champsim.sh  visualize_cache.py
src/: CMakeLists.txt
src/api/: instrumentation.cpp  instrumentation.hpp
src/core/: decoder.cpp  decoder.hpp  encoding.hpp  engine.cpp  engine.hpp  instruction.cpp  instruction.hpp
src/tools/: cache_sim.hpp  champsim_trace.hpp  champsim_tracer.hpp
test/: hello.S
